src/test/resources/entity_test/invalid/Employee4.entity
// Entity name 'E#n_titéid:integer;' different from file name
E#n_tité {
 id:integer;
}
